salesforce/10.15/modules/ROOT/pages/salesforce-connector-troubleshoot.adoc
= Troubleshooting Salesforce Connector 10.15 - Mule 4
:page-aliases: connectors::salesforce/salesforce-troubleshoot.adoc

To troubleshoot Anypoint Connector for Salesforce (Salesforce Connector), become familiar with the information about performing general troubleshooting and interpreting commonly thrown exception messages.

include::connectors::partial$ssl-logs.adoc[]

include::connectors::partial$verbose-exception-logs.adoc[]

include::connectors::partial$verbose-logs-org.adoc[]

== Perform General Troubleshooting

Here is a list of general troubleshooting guidelines for Salesforce Connector:

* <<currency>>
* <<evaluate-values-in-a-salesforce-list>>
* <<insert-values-in-a-salesforce-connector-list>>
* <<japanese-support>>
* <<limits-on-api-calls>>
* <<opportunity-object>>

[[currency]]
=== Currency

Currency values cannot exceed 18 characters in length.

When working with multiple currencies, you must know which currency your sObject uses to avoid inaccurate entries. The default currency matches the location at the organization level.

[[evaluate-values-in-a-salesforce-list]]
=== Evaluate Values in a Salesforce List

When using a value to evaluate against contents of an existing list field in Salesforce, use the exact value in the list. For example, if you use the value `US` to evaluate against contents of a list that contains the value `USA`, the evaluation works, but the result returns two values in the list: one for `US` and one for `USA`.

[[insert-values-in-a-salesforce-connector-list]]
=== Insert Values in a Salesforce Connector List

Inserting dependent values into an existing list in Salesforce Connector does not always work. Test to confirm this functionality.

[[japanese-support]]
=== Japanese Support

Salesforce Connector supports Japanese characters for all operations, with the following exceptions:

* The *Publish Streaming Channel* operation does not support Japanese characters in the *Channel name* field, which can contain only alphanumeric characters, and the `&#95;` or `/` characters. Refer to the Salesforce https://developer.salesforce.com/docs/atlas.en-us.228.0.object_reference.meta/object_reference/sforce_api_objects_streamingchannel.htm[StreamingChannel] documentation for more information.

* Metadata operations might return error messages if some fields contain Japanese characters. For example, creating custom objects or custom fields with a *Full Name* that contains Japanese characters triggers a `FIELD_INTEGRITY_EXCEPTION` error with the following message: +
`The Object Name field can only contain underscores and alphanumeric characters. It must be unique, begin with a letter, not include spaces, not end with an underscore, and not contain two consecutive underscores.`

[[limits-on-api-calls]]
=== Limits on API Calls

You must know the scope of the rate limiting policy that applies to your account so that you do not exceed the number of allotted API calls per day.

[[opportunity-object]]
=== Opportunity Object

When extracting data from a Salesforce Opportunity object, be aware that a `quarter` in this context is relative to the fiscal year of the organization and not necessarily to the calendar year.


== Understand Commonly Thrown Exceptions

Here is a list of commonly thrown exception messages and how to interpret them:

* SALESFORCE:CONNECTIVITY

 A problem occurred and a connection could not be established.

* SALESFORCE:INVALID_INPUT

 The provided input data for an operation is not valid.

* SALESFORCE:INVALID_RESPONSE

 The response from the server cannot be processed.

* SALESFORCE:LIMIT_EXCEEDED

 A specific limit is exceeded, for example, if you try to create more than 200 entities at once with the *Create* operation.

* SALESFORCE:MUTUAL_AUTHENTICATION_FAILED

 The mutual authentication failed.

* SALESFORCE:NOT_FOUND

 The server could not find the requested resource.

* SALESFORCE:RETRY_EXHAUSTED

 The maximum number of retries for the operation is reached.

* SALESFORCE:TIMEOUT

 A specific request takes longer than a configured amount of time to complete.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:salesforce-connector-reference.adoc[Salesforce Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
